--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
    <!--Navigation--> 
     <header>
-        <!--Colored Bars-->
+        <!--The colored bar-->
         <div class="d-flex">
             <div class="flex-grow bg-warning bar-height"></div>
             <div class="flex-grow bg-success bar-height"></div>
@@ -31,31 +31,31 @@
             <div class="flex-grow bg-primary bar-height"></div>
             <div class="flex-grow bg-cozy bar-height"></div>
         </div>
-
+        <!--Navigation icons-->
         <nav class="d-flex max-width justify-content-between align-items-center mx-auto p-6">
             <img class="logo-width" src="images/logo-school.png">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between d-sm-none">
                 <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
-                    <div class="d-flex align-items-center justify-content-center bg-info p-4 circle">
-                        <i class=" fa fa-home text-white"></i>
+                    <div class="d-flex align-items-center justify-content-center bg-info p-4 circle shadow-sm">
+                        <i class="fa fa-home text-white"></i>
                     </div>
                     <span class="text-info mt-4 lh-sm">Home</span>
                 </a>
                 <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
                     <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle shadow-sm">
-                        <i class=" fa fa-store text-white"></i>
+                        <i class="fa fa-home text-white"></i>
                     </div>
                     <span class="text-cozy mt-4 lh-sm">Store</span>
                 </a>
                 <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
-                    <div class="d-flex align-items-center justify-content-center bg-success p-4 circle circle shadow-sm">
-                        <i class=" fa fa-user-graduate text-white"></i>
+                    <div class="d-flex align-items-center justify-content-center bg-success p-4 circle shadow-sm">
+                        <i class="fa fa-home text-white"></i>
                     </div>
                     <span class="text-success mt-4 lh-sm">Courses</span>
                 </a>
                 <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
                     <div class="d-flex align-items-center justify-content-center bg-warning p-4 circle shadow-sm">
-                        <i class=" fa fa-blog text-white"></i>
+                        <i class="fa fa-home text-white"></i>
                     </div>
                     <span class="text-warning mt-4 lh-sm">Blog</span>
                 </a>
@@ -67,92 +67,90 @@
                     </div>
                     <span class="text-white position-absolute icon-badge circle bg-success border-small-white text-size-xxs">3</span>
                 </a>
-                <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative d-none d-sm-block">
                     <div class="d-flex align-items-center justify-content-center bg-info border-radius p-4 shadow-sm">
                         <i class="fa fa-bars text-white"></i>
                     </div>
                 </a>
-        
             </div>
         </nav>
 
-        <!-- Colored Bars -->
-        <div class="d-flex">
-            <div class="flex-grow bg-warning bar-height"></div>
-            <div class="flex-grow bg-success bar-height"></div>
-            <div class="flex-grow bg-danger bar-height"></div>
-            <div class="flex-grow bg-info bar-height"></div>
-            <div class="flex-grow bg-primary bar-height"></div>
-            <div class="flex-grow bg-cozy bar-height"></div>
-            <div class="flex-grow bg-warning bar-height"></div>
-            <div class="flex-grow bg-success bar-height"></div>
-            <div class="flex-grow bg-danger bar-height"></div>
-            <div class="flex-grow bg-info bar-height"></div>
-            <div class="flex-grow bg-primary bar-height"></div>
-            <div class="flex-grow bg-cozy bar-height"></div>
+        <!--The colored bar-->
+        <div class="d-flex ">
+            <div class="flex-grow bg-warning bar-height "></div>
+            <div class="flex-grow bg-success bar-height "></div>
+            <div class="flex-grow bg-danger bar-height "></div>
+            <div class="flex-grow bg-info bar-height "></div>
+            <div class="flex-grow bg-primary bar-height "></div>
+            <div class="flex-grow bg-cozy bar-height "></div>
+            <div class="flex-grow bg-warning bar-height "></div>
+            <div class="flex-grow bg-success bar-height "></div>
+            <div class="flex-grow bg-danger bar-height "></div>
+            <div class="flex-grow bg-info bar-height "></div>
+            <div class="flex-grow bg-primary bar-height "></div>
+            <div class="flex-grow bg-cozy bar-height "></div>
         </div>
-
-        <!-- Drop-down Nav (small devices) -->
-        <div class="mx-6 d-none">
+        <!-- Drop down nav -->
+        <div class="mx-6 d-none d-sm-block">
             <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
                 <div class="d-flex align-items-center justify-content-center bg-info p-4 circle shadow-sm">
-                    <i class=" fa fa-home text-white"></i>
+                    <i class="fa fa-home text-white"></i>
                 </div>
                 <span class="text-info mr-4">Home</span>
             </a>
             <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
                 <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle shadow-sm">
-                    <i class=" fa fa-store text-white"></i>
+                    <i class="fa fa-home text-white"></i>
                 </div>
                 <span class="text-cozy mr-4">Store</span>
             </a>
             <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
-                <div class="d-flex align-items-center justify-content-center bg-success p-4 circle circle shadow-sm">
-                    <i class=" fa fa-user-graduate text-white"></i>
+                <div class="d-flex align-items-center justify-content-center bg-success p-4 circle shadow-sm">
+                    <i class="fa fa-home text-white"></i>
                 </div>
                 <span class="text-success mr-4">Courses</span>
             </a>
             <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6">
                 <div class="d-flex align-items-center justify-content-center bg-warning p-4 circle shadow-sm">
-                    <i class=" fa fa-blog text-white"></i>
+                    <i class="fa fa-home text-white"></i>
                 </div>
                 <span class="text-warning mr-4">Blog</span>
             </a>
-        </div>
+            </div>
     </header>
 
     <!-- Top Slider -->
     <section class="overflow-hidden">
-    <figure class="d-flex position-relative slider-width slider-animation">
-        <div class=" slider-container position-relative">
-            <div class="position-absolute centerXY bg-dark-transparent text-light text-center p-4">
-                <h1>School Website</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <figure class="d-flex position-relative slider-width slider-animation">
+            <div class="slider-container position-relative">
+                <div class="position-absolute centerXY btn-dark-transparent text-light text-center p-4 heading-xxs-width">
+                    <h1>School Website</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+                <img src="images/Slider/img-1.jpg" class="slider-image" alt="Children at school">
             </div>
-            <img src="images/Slider/img-1.jpg" alt="Children at School">
-        </div>
-        <div class=" slider-container position-relative">
-            <div class="position-absolute centerXY bg-dark-transparent text-light text-center p-4">
-                <h1>School Website</h1>
-                <p>Ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <div class="slider-container position-relative">
+                <div class="position-absolute centerXY btn-dark-transparent text-light text-center p-4 heading-xxs-width">
+                    <h1>School Website</h1>
+                    <p>ipsum ipsum dolor sit amet consectetur</p>
+                </div>
+                <img src="images/Slider/img-2.jpg" class="slider-image" alt="Children at school">
             </div>
-            <img src="images/Slider/img-2.jpg" alt="Children at School">
-        </div>
-        <div class=" slider-container position-relative">
-            <div class="position-absolute centerXY bg-dark-transparent text-light text-center p-4">
-                <h1>School Website</h1>
-                <p>dolor sit amet consectetur adipisicing elit.</p>
+            <div class="slider-container position-relative">
+                <div class="position-absolute centerXY btn-dark-transparent text-light text-center p-4 heading-xxs-width">
+                    <h1>School Website</h1>
+                    <p>Superm ipsum dolor sit amet consectetur</p>
+                </div>
+                <img src="images/Slider/img-3.jpg" class="slider-image" alt="Children at school">
             </div>
-            <img src="images/Slider/img-3.jpg" alt="Children at School">
-        </div>
-        <div class=" slider-container position-relative">
-            <div class="position-absolute centerXY bg-dark-transparent text-light text-center p-4">
-                <h1>School Website</h1>
-                <p>sit amet consectetur adipisicing elit.</p>
+            <div class="slider-container position-relative">
+                <div class="position-absolute centerXY btn-dark-transparent text-light text-center p-4 heading-xxs-width">
+                    <h1>School Website</h1>
+                    <p>Patek ipsum dolor sit amet consectetur</p>
+                </div>
+                <img src="images/Slider/img-4.jpg" class="slider-image" alt="Children at school">
             </div>
-            <img src="images/Slider/img-4.jpg" alt="Children at School">
-        </div>
-    </figure>
+        </figure>
     </section>
 
     <!-- Features heading -->
@@ -283,11 +281,12 @@
         <img src="images/gallery/gallery-img6.jpg" class="border-radius m-6" alt="Image of Children at school">
         <img src="images/gallery/gallery-img7.jpg" class="border-radius m-6" alt="Image of Children at school">
         <img src="images/gallery/gallery-img8.jpg" class="border-radius m-6" alt="Image of Children at school">
+
     </div>
     </section>
 
 <!-- Teachers -->
-    <div class="bg-cozy my-15 p-12">
+    <section class="bg-cozy my-15 p-12">
         <!-- Teachers Heading -->
     <section class="d-flex justify-content-center align-items-center mt-4 mb-10">
         <div class="crayon" style="--crayon-color: #f0c24b;--crayon-paper-color: #f8e2ab;--crayon-line-color: #ea7066;"></div>
@@ -313,7 +312,80 @@
             <div>Mrs. Malkolova</div>
             </div>
         </div>
-    </div>
+    </section>
 
+    <!-- Our Classes Heading -->
+    <section class="d-flex justify-content-center align-items-center mt-15 mb-10">
+            <div class="crayon" style="--crayon-color: #3104fd;--crayon-paper-color: #ffffff;--crayon-line-color: #000000;"></div>
+            <h2 class="mx-4 text-warning">Our Classes</h2>
+            <div class="crayon" style="--crayon-color: #3104fd;--crayon-paper-color: #ffffff;--crayon-line-color: #000000;"></div>
+        </section>
+
+    <!-- Our Classes -->
+    <section class="mb-15">
+        <!-- Our Classes Container -->
+        <div class="d-flex justify-content-center flex-wrap text-white max-width mx-auto">
+            <!-- Classes Card 1 -->
+            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
+                <img src="images/events/events-img1.jpg" class="img-lg-width" alt="Children playing at school">
+                <div class="d-flex flex-column bg-info p-6">
+                    <h2 class="mb-6">Lorem ipsum dolor</h2>
+                    <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
+                    <div><i class="far fa-clock mr-4 mb-10"></i>9:00AM-11:00AM</div>
+                    <div class="mb-10">Donex condimentum tellus ex, ac faucibus nisi elementum eu. Donex quis ligula</div>
+                    <a class="btn-warning text-size-lg text-uppercase text-center border-radius shadow-lg p-4 mb-4">Learn More</a>
+                </div>
+                <div class="d-flex flex-column justify-content-center align-items-center bg-info position-absolute m-6 p-4 text-bold text-size-xs lh-md border-radius">
+                    <div>10</div>
+                    <div>June</div>
+            </div>
+            </div>
+            <!-- Classes Card 2 -->
+            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
+            <img src="images/events/events-img2.jpg" class="img-lg-width" alt="Children playing at school">
+            <div class="d-flex flex-column bg-cozy p-6">
+                <h2 class="mb-6">Lorem ipsum dolor</h2>
+                <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
+                <div><i class="far fa-clock mr-4 mb-10"></i>9:00AM-11:00AM</div>
+                <div class="mb-10">Donex condimentum tellus ex, ac faucibus nisi elementum eu. Donex quis ligula</div>
+                <a class="btn-warning text-size-lg text-uppercase text-center border-radius shadow-lg p-4 mb-4">Learn More</a>
+            </div>
+            <div class="d-flex flex-column justify-content-center align-items-center bg-cozy position-absolute m-6 p-4 text-bold text-size-xs lh-md border-radius">
+                <div>10</div>
+                <div>June</div>
+        </div>
+            </div>
+            <!-- Classes Card 3 -->
+            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
+        <img src="images/events/events-img3.jpg" class="img-lg-width" alt="Children playing at school">
+        <div class="d-flex flex-column bg-primary p-6">
+            <h2 class="mb-6">Lorem ipsum dolor</h2>
+            <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
+            <div><i class="far fa-clock mr-4 mb-10"></i>9:00AM-11:00AM</div>
+            <div class="mb-10">Donex condimentum tellus ex, ac faucibus nisi elementum eu. Donex quis ligula</div>
+            <a class="btn-warning text-size-lg text-uppercase text-center border-radius shadow-lg p-4 mb-4">Learn More</a>
+        </div>
+        <div class="d-flex flex-column justify-content-center align-items-center bg-primary position-absolute m-6 p-4 text-bold text-size-xs lh-md border-radius">
+            <div>10</div>
+            <div>June</div>
+    </div>
+            </div>
+            <!-- Classes Card 4 -->
+            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
+    <img src="images/events/events-img4.jpg" class="img-lg-width" alt="Children playing at school">
+    <div class="d-flex flex-column bg-danger p-6">
+        <h2 class="mb-6">Lorem ipsum dolor</h2>
+        <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
+        <div><i class="far fa-clock mr-4 mb-10"></i>9:00AM-11:00AM</div>
+        <div class="mb-10">Donex condimentum tellus ex, ac faucibus nisi elementum eu. Donex quis ligula</div>
+        <a class="btn-warning text-size-lg text-uppercase text-center border-radius shadow-lg p-4 mb-4">Learn More</a>
+    </div>
+    <div class="d-flex flex-column justify-content-center align-items-center bg-warning position-absolute m-6 p-4 text-bold text-size-xs lh-md border-radius">
+        <div>10</div>
+        <div>June</div>
+        </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
